--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,12 +52,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
     implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
 
-
-    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
-    testImplementation 'org.mockito:mockito-core:3.3.3'
-    testImplementation 'org.mockito:mockito-inline:2.7.22'
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:3.13.1'
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.0.0")
+    testImplementation("com.squareup.okhttp3:okhttp:4.9.1")
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -74,8 +73,14 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$daggerVer"
 
     // cooroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     // ktx
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
 }
