--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     // ktx
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 
+    //rxKotlin
+    implementation("io.reactivex.rxjava2:rxkotlin:2.0.0")
+
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
